# gen_aI-local_docs

./: main.py  pyproject.toml  search_docs.py
app/: local_genai_search.py  local_genai_search_ollama.py  main.py  read_docs.py  search_docs.py
